[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/group_bloc.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 175, 25 )

[node name="Node2D" type="Node2D"]
light_mask = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 350.0
margin_bottom = 50.0
color = Color( 0.415686, 0.576471, 0.8, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
margin_left = 50.0
margin_right = 300.0
margin_bottom = 50.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 245.0
margin_bottom = 45.0

[node name="left_button" type="Button" parent="ColorRect/MarginContainer/HBoxContainer"]
margin_right = 118.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="right_button" type="Button" parent="ColorRect/MarginContainer/HBoxContainer"]
margin_left = 122.0
margin_right = 240.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="label" type="Label" parent="ColorRect/MarginContainer"]
margin_left = 5.0
margin_top = 9.0
margin_right = 245.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Label du groupe
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect"]
margin_left = 300.0
margin_right = 350.0
margin_bottom = 50.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level" type="Label" parent="ColorRect/MarginContainer2"]
margin_left = 5.0
margin_top = 9.0
margin_right = 45.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vertical_rect" type="ColorRect" parent="."]
margin_top = 50.0
margin_right = 50.0
margin_bottom = 100.0
color = Color( 0.415686, 0.576471, 0.8, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end_rect" type="ColorRect" parent="."]
margin_top = 100.0
margin_right = 350.0
margin_bottom = 150.0
color = Color( 0.415686, 0.576471, 0.8, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3

[node name="Shape" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 175, 25 )
shape = SubResource( 1 )
[connection signal="gui_input" from="ColorRect" to="." method="_on_ColorRect_gui_input"]
[connection signal="mouse_entered" from="ColorRect/MarginContainer/HBoxContainer/left_button" to="." method="_on_left_button_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/MarginContainer/HBoxContainer/left_button" to="." method="_on_left_button_mouse_exited"]
[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/left_button" to="." method="_on_left_button_pressed"]
[connection signal="mouse_entered" from="ColorRect/MarginContainer/HBoxContainer/right_button" to="." method="_on_right_button_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/MarginContainer/HBoxContainer/right_button" to="." method="_on_right_button_mouse_exited"]
[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/right_button" to="." method="_on_right_button_pressed"]
[connection signal="gui_input" from="ColorRect/MarginContainer2" to="." method="_on_ColorRect_gui_input"]
[connection signal="gui_input" from="vertical_rect" to="." method="_on_ColorRect_gui_input"]
[connection signal="gui_input" from="end_rect" to="." method="_on_ColorRect_gui_input"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
